# ArrowVortex

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  CREDITS  README.md  changelog.txt  clean.bat  fungus-toolchain.cmake  todo.txt  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  windows.yml
doc/: Class-Template.md
doc/Core/: ByteStream.md  Canvas.md  Core.md  Draw.md
lib/freetype/: licenses.txt
lib/libmad/include/: mad.h
lib/libmad/src/: config.h
lib/lua/: license.txt
lib/lua/src/: ldebug.c  lgc.c  llex.c  lmathlib.c  loslib.c  lparser.c  lparser.h  lstate.c  ltablib.c
src/Audio/: Aubio.cpp  Aubio.h  Butterworth.cpp  Butterworth.h  ConvertToOgg.cpp  ConvertToOgg.h  FFT.cpp  FindOnsets.cpp  FindOnsets.h  FindTempo.cpp  FindTempo.h  Formats.h  Sound.cpp  Sound.h
src/Audio/Formats/: LoadMp3.cpp  LoadOgg.cpp  LoadWav.cpp
src/Core/: AlignedMemory.h  ByteStream.cpp  ByteStream.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Core.h  Draw.cpp  Draw.h  FontData.cpp  FontData.h  FontManager.cpp  FontManager.h  Gui.cpp  Gui.h  GuiContext.cpp  GuiContext.h  GuiDialog.cpp  GuiDialog.h  GuiDraw.cpp  GuiDraw.h  GuiManager.cpp  GuiManager.h  GuiWidget.cpp  GuiWidget.h  ImageLoader.cpp  ImageLoader.h  Input.cpp  Input.h  MapUtils.h  NonCopyable.h  Polyfit.h  Precomp.h  QuadBatch.cpp  QuadBatch.h  Reference.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  (+36 more)
src/Core/Common/: Event.cpp  Event.h  Input.cpp  Input.h  NonCopyable.h  Serialize.cpp  Serialize.h  Setting.cpp  Setting.h
src/Core/Graphics/: Canvas.cpp  Canvas.h  Color.cpp  Color.h  Colorf.cpp  Colorf.h  Draw.cpp  Draw.h  Font.cpp  Font.h  FontData.cpp  FontData.h  FontManager.cpp  FontManager.h  Image.cpp  Image.h  ImageWriter.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Vulkan.cpp  Vulkan.h
src/Core/Graphics/Shaders/: color.frag  (+3 more)
src/Core/Interface/: Binding.cpp  Binding.h  Dialog.cpp  Dialog.h  DialogFrame.h  UiElement.cpp  UiElement.h  UiMan.cpp  UiMan.h  UiStyle.cpp  UiStyle.h  Widget.cpp  Widget.h
src/Core/System/: AudioOut.cpp  AudioOut.h  Debug.cpp  Debug.h  File.cpp  File.h  Log.cpp  Log.h  System.cpp  System.h  Thread.cpp  Thread.h  Window.cpp  Window.h
src/Core/Types/: Rect.h  Rectf.h  Size2.h  Vec2.h  Vec2f.h
src/Core/Utils/: Ascii.h  Enum.h  Flag.h  Map.h  Polyfit.h  String.cpp  String.h  Unicode.cpp  Unicode.h  Util.h  Vector.h  Xmr.cpp  Xmr.h  Zip.cpp  Zip.h
src/Dialogs/: AdjustSync.cpp  AdjustSync.h  AdjustTempo.cpp  AdjustTempo.h  AdjustTempoSM5.cpp  AdjustTempoSM5.h  CMakeLists.txt  ChartList.cpp  ChartList.h  ChartProperties.cpp  ChartProperties.h  CustomSnap.cpp  CustomSnap.h  DancingBot.cpp  DancingBot.h  Dialog.cpp  Dialog.h  GenerateNotes.cpp  GenerateNotes.h  LabelBreakdown.cpp  LabelBreakdown.h  NewChart.cpp  NewChart.h  SongProperties.cpp  SongProperties.h  TempoBreakdown.cpp  TempoBreakdown.h  WaveformSettings.cpp  WaveformSettings.h  Zoom.cpp  Zoom.h  dialog.cpp  dialog.h
src/Editor/: Action.cpp  Action.h  Aubio.cpp  Aubio.h  Butterworth.cpp  Butterworth.h  CMakeLists.txt  Common.cpp  Common.h  ConvertToOgg.cpp  ConvertToOgg.h  Editing.cpp  Editing.h  Editor.cpp  Editor.h  FFT.cpp  FindOnsets.cpp  FindOnsets.h  FindTempo.cpp  FindTempo.h  History.cpp  History.h  LoadMp3.cpp  LoadOgg.cpp  LoadWav.cpp  Menubar.cpp  Menubar.h  Minimap.cpp  Minimap.h  Music.cpp  Music.h  Notefield.cpp  Notefield.h  NotefieldPreview.cpp  NotefieldPreview.h  RatingEstimator.cpp  RatingEstimator.h  Selection.cpp  Selection.h  Shortcuts.cpp  (+26 more)
src/Managers/: CMakeLists.txt  ChartMan.cpp  ChartMan.h  MetadataMan.cpp  MetadataMan.h  NoteMan.cpp  NoteMan.h  NoteskinMan.cpp  NoteskinMan.h  SimfileMan.cpp  SimfileMan.h  StyleMan.cpp  StyleMan.h  TempoMan.cpp  TempoMan.h
src/NuSystem/: CMakeLists.txt  System.cpp
src/Simfile/: CMakeLists.txt  Chart.cpp  Chart.h  Common.h  Encoding.cpp  Encoding.h  Formats.h  GameMode.cpp  GameMode.h  History.cpp  History.h  LoadDwi.cpp  LoadOsu.cpp  LoadSm.cpp  NoteCol.cpp  NoteCol.h  NoteIterator.cpp  NoteIterator.h  NoteList.cpp  NoteList.h  NoteSet.cpp  NoteSet.h  NoteUtils.cpp  NoteUtils.h  Notes.cpp  Notes.h  Parsing.cpp  Parsing.h  SaveOsu.cpp  SaveSm.cpp  SegmentGroup.cpp  SegmentGroup.h  SegmentList.cpp  SegmentList.h  Segments.cpp  Segments.h  Simfile.cpp  Simfile.h  Tempo.cpp  Tempo.h  (+3 more)
src/Simfile/Formats/: LoadAudio.cpp  LoadSm.cpp  SaveSm.cpp
src/Simfile/Tempo/: SegmentSet.cpp  SegmentSet.h  SegmentTrack.cpp  SegmentTrack.h  SegmentTypes.cpp  SegmentTypes.h  SegmentUtils.h  TimingData.cpp  TimingData.h
src/System/: ArrowVortex.rc  CMakeLists.txt  Debug.cpp  Debug.h  File.cpp  File.h  Mixer.cpp  Mixer.h  OpenGL.h  Resources.h  System.cpp  System.h  Thread.cpp  Thread.h
src/Test/: SegmentTest.cpp  TestUtils.cpp  TestUtils.h
src/Vortex/: Application.cpp  Application.h  ApplicationMenu.cpp  ApplicationMenu.h  Commands.cpp  Commands.h  Common.cpp  Common.h  Editor.cpp  Editor.h  Settings.cpp  Settings.h  Shortcuts.cpp  Shortcuts.h  VortexUtils.cpp  VortexUtils.h
src/Vortex/Edit/: Clipboard.cpp  Clipboard.h  Editing.cpp  Editing.h  RatingEstimator.cpp  RatingEstimator.h  Selection.cpp  Selection.h  StreamGenerator.cpp  StreamGenerator.h  TempoTweaker.cpp  TempoTweaker.h
src/Vortex/Lua/: Api.h  Global.cpp  Global.h  Types.cpp  Types.h  Utils.cpp  Utils.h
src/Vortex/Managers/: DialogMan.cpp  DialogMan.h  GameMan.cpp  GameMan.h  MusicMan.cpp  MusicMan.h
src/Vortex/Notefield/: Background.cpp  Background.h  BeatLines.cpp  BeatLines.h  BeatRegions.cpp  BeatRegions.h  Notefield.cpp  Notefield.h  NotefieldPosTracker.h  SegmentBoxes.cpp  SegmentBoxes.h  Waveform.cpp  Waveform.h
src/Vortex/Noteskin/: Noteskin.cpp  Noteskin.h  NoteskinLoader.cpp  NoteskinLoader.h  NoteskinMan.cpp  NoteskinMan.h
src/Vortex/View/: CommandLine.cpp  CommandLine.h  EditorDialog.cpp  EditorDialog.h  Hud.cpp  Hud.h  Minimap.cpp  Minimap.h  StatusBar.cpp  StatusBar.h  TextOverlay.cpp  TextOverlay.h  View.cpp  View.h
(+77 files in other folders)
